--- a/public/index.html
+++ b/public/index.html
@@ -281,7 +281,7 @@
     
   </div>
   <div class="col-xs-12 col-md-8">
-    
+    <p>Some selected interesting projects that I have done with my fantastic team</p>
 
     <div class="project-toolbar">
       <div id="filters">
