--- a/public/talk/example-talk/index.html
+++ b/public/talk/example-talk/index.html
@@ -274,10 +274,7 @@
   <div class="container">
     <p class="powered-by">
 
-      &copy; 2017 Anh Hoang Duc &middot; 
-
-      Powered by the <a href="https://github.com/gcushen/hugo-academic" target="_blank">Academic
-      theme</a> for <a href="http://gohugo.io" target="_blank">Hugo</a>.
+      &copy; 2017 Anh Hoang Duc 
 
       <span class="pull-right" aria-hidden="true">
         <a href="#" id="back_to_top">
