--- a/public/404.html
+++ b/public/404.html
@@ -145,6 +145,10 @@
   <h2>Recent Posts</h2>
   
   <ul>
+    <li><a href="./post/how-to-manage-libraries-in-r-efficiently/">How to manage libraries in R efficiently?</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="./post/new-test-markdown/">New test markdown</a></li>
   </ul>
   
