--- a/public/404.html
+++ b/public/404.html
@@ -32,6 +32,19 @@
   
 
   
+    <script>
+      window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+      ga('create', 'UA-104410794-1', 'auto');
+      ga('require', 'eventTracker');
+      ga('require', 'outboundLinkTracker');
+      ga('require', 'urlChangeTracker');
+      ga('send', 'pageview');
+    </script>
+    <script async src="//www.google-analytics.com/analytics.js"></script>
+    
+    <script async src="https://cdnjs.cloudflare.com/ajax/libs/autotrack/2.4.1/autotrack.js" integrity="sha512-HUmooslVKj4m6OBu0OgzjXXr+QuFYy/k7eLI5jdeEy/F4RSgMn6XRWRGkFi5IFaFgy7uFTkegp3Z0XnJf3Jq+g==" crossorigin="anonymous"></script>
+    
+  
 
   <link rel="alternate" href="./index.xml" type="application/rss+xml" title="Anh Hoang Duc">
   <link rel="feed" href="./index.xml" type="application/rss+xml" title="Anh Hoang Duc">
@@ -143,6 +156,10 @@
   <p>Maybe you were looking for one of these?</p>
 
   <h2>Recent Posts</h2>
+  
+  <ul>
+    <li><a href="./post/install-r-packages-from-github-through-proxy/">Install R packages from Github through proxy</a></li>
+  </ul>
   
   <ul>
     <li><a href="./post/how-to-manage-libraries-in-r-efficiently/">How to manage libraries in R efficiently?</a></li>
