--- a/public/404.html
+++ b/public/404.html
@@ -170,6 +170,10 @@
   <h2>Recent Posts</h2>
   
   <ul>
+    <li><a href="./post/create-waterfall-chart-with-ggplot2/">Create waterfall chart with GGPLOT2</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="./post/install-r-packages-from-github-through-proxy/">Install R packages from Github through proxy</a></li>
   </ul>
   
