--- a/public/cv/index.html
+++ b/public/cv/index.html
@@ -244,7 +244,7 @@
 
     <div class="article-style" itemprop="articleBody">
       <p><object data="/pdf/ducanhcv.pdf#page=2" 
-<iframe src="../pdf/ducanhcv.pdf#page=2" width="120%" height="120%" style="border: none;">
+<iframe src="../pdf/ducanhcv.pdf#page=2" width="900" height="1200" style="border: none;">
 This browser does not support PDFs. Please download the PDF to view it: <a href="../pdf/ducanhcv.pdf">Download PDF</a>
 </iframe>
 </object></p>
