--- a/public/index.html
+++ b/public/index.html
@@ -146,9 +146,9 @@
         
 
         <li class="nav-item">
-          <a href="./post/" data-target="/post/">
+          <a href="./blog/" data-target="/blog/">
             
-            <span>Posts</span>
+            <span>Blog</span>
           </a>
         </li>
 
