--- a/public/cv/index.html
+++ b/public/cv/index.html
@@ -56,7 +56,7 @@
 
   
 
-  <title>Anh Hoang Duc - Curriculum viate | Anh Hoang Duc</title>
+  <title>Anh Hoang Duc - Curriculum vitae | Anh Hoang Duc</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#navbar-main" data-offset="71">
@@ -169,7 +169,7 @@
 
 
   <div class="article-container">
-    <h1 itemprop="name">Anh Hoang Duc - Curriculum viate</h1>
+    <h1 itemprop="name">Anh Hoang Duc - Curriculum vitae</h1>
     
 
 <div class="article-metadata">
@@ -197,28 +197,28 @@
     </li>
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Anh%20Hoang%20Duc%20-%20Curriculum%20viate&amp;url=%2fcv%2f"
+         href="https://twitter.com/intent/tweet?text=Anh%20Hoang%20Duc%20-%20Curriculum%20vitae&amp;url=%2fcv%2f"
          target="_blank">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fcv%2f&amp;title=Anh%20Hoang%20Duc%20-%20Curriculum%20viate"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fcv%2f&amp;title=Anh%20Hoang%20Duc%20-%20Curriculum%20vitae"
          target="_blank">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=%2fcv%2f&amp;title=Anh%20Hoang%20Duc%20-%20Curriculum%20viate"
+         href="http://service.weibo.com/share/share.php?url=%2fcv%2f&amp;title=Anh%20Hoang%20Duc%20-%20Curriculum%20vitae"
          target="_blank">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Anh%20Hoang%20Duc%20-%20Curriculum%20viate&amp;body=%2fcv%2f">
+         href="mailto:?subject=Anh%20Hoang%20Duc%20-%20Curriculum%20vitae&amp;body=%2fcv%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
