--- a/static/ca-nhan/check-list.html
+++ b/static/ca-nhan/check-list.html
@@ -1524,25 +1524,27 @@ div.tocify {
 </div>
 
 
-<div id="cua-dua" class="section level1">
-<h1><span class="header-section-number">1</span> Đồ của Dưa</h1>
-<p><input type="checkbox"> Ba lô<br> <input type="checkbox"> Va li<br> <input type="checkbox"> Địu<br></p>
+<div id="du-lich-cua-dua" class="section level1">
+<h1><span class="header-section-number">1</span> Đồ du lịch của Dưa</h1>
+<p><input type="checkbox"> Ba lô<br> <input type="checkbox"> Va li<br> <input type="checkbox"> Địu<br> <input type="checkbox"> Ô che mưa<br></p>
 <hr />
-<p><input type="checkbox"> 2 Khăn tắm<br> <input type="checkbox"> 10 khăn lau mặt<br> <input type="checkbox"> 5 khăn lau đít<br> <input type="checkbox"> 5 bộ quần áo/ngày<br> <input type="checkbox"> Mũ che nắng<br> <input type="checkbox"> Ô che mưa<br> <input type="checkbox"> Khăn giấy: 20 cái/ngày<br> <input type="checkbox"> Bỉm: 5 cái/ngày<br> <input type="checkbox"> Tấm lót chống thấm<br></p>
+<p><input type="checkbox"> 2 Khăn tắm<br> <input type="checkbox"> 10 khăn lau mặt<br> <input type="checkbox"> 5 khăn lau đít<br> <input type="checkbox"> 5 bộ quần áo/ngày<br> <input type="checkbox"> Khăn tam giác/khăn quàng cổ<br> <input type="checkbox"> 3 yếm dãi/ngày<br> <input type="checkbox"> 5 bộ quần áo/ngày<br> <input type="checkbox"> 2 đôi tất/ngày<br> <input type="checkbox"> Giày/Dép<br> <input type="checkbox"> Mũ che nắng<br> <input type="checkbox"> Khăn giấy: 20 cái/ngày<br> <input type="checkbox"> Bỉm: 5 cái/ngày<br> <input type="checkbox"> Tấm lót chống thấm<br></p>
 <hr />
 <p><input type="checkbox"> Bàn ăn<br> <input type="checkbox"> Yếm nhựa<br> <input type="checkbox"> Bát &amp; thìa ăn<br></p>
 <hr />
-<p><input type="checkbox"> Kem chống hăm<br> <input type="checkbox"> Vi-ta-min D<br> <input type="checkbox"> Bấm móng tay<br> <input type="checkbox"> Thuốc bôi ngứa ngoài da<br> <input type="checkbox"> Cặp nhiệt độ<br> <input type="checkbox"> Thuốc dị ứng<br></p>
+<p><input type="checkbox"> Kem chống hăm<br> <input type="checkbox"> Vi-ta-min D<br> <input type="checkbox"> Bấm móng tay<br> <input type="checkbox"> Thuốc bôi ngứa ngoài da<br> <input type="checkbox"> Cặp nhiệt độ<br> <input type="checkbox"> Thuốc dị ứng<br> <input type="checkbox"> Thuốc cảm<br></p>
+<hr />
+<p><input type="checkbox"> Dnee giặt <br> <input type="checkbox"> sữa tám/dầu gội đầu<br></p>
 </div>
-<div id="cua-c-anh" class="section level1">
-<h1><span class="header-section-number">2</span> Đồ của Đức Anh</h1>
-<p><input type="checkbox"> Vali con/ba lô<br> <input type="checkbox"> Vali to <br> <input type="checkbox"> Túi chéo vai/ba-lô vải<br></p>
+<div id="du-lich-cua-b-me" class="section level1">
+<h1><span class="header-section-number">2</span> Đồ du lịch của bố mẹ</h1>
+<p><input type="checkbox"> Vali con/ba lô<br> <input type="checkbox"> Vali to <br> <input type="checkbox"> Túi chéo vai/ba-lô vải<br> <input type="checkbox"> Gối ngủ trên máy bay<br></p>
 <hr />
 <p><input type="checkbox"> Hộ chiếu<br> <input type="checkbox"> Chứng minh thư<br> <input type="checkbox"> Tiền mặt<br> <input type="checkbox"> Ví<br> <input type="checkbox"> Vé máy bay <br> <input type="checkbox"> Giấy tờ book khách sạn<br> <input type="checkbox"> Điện thoại<br> <input type="checkbox"> Sạc điện thoại<br> <input type="checkbox"> Sim 3G<br> <input type="checkbox"> Lap-top/sạc lap-top<br> <input type="checkbox"> Bút trình chiếu slide<br></p>
 <hr />
 <p><input type="checkbox"> Thuốc dị ứng<br> <input type="checkbox"> Thuốc hen suyễn<br> <input type="checkbox"> Thuốc đau bụng<br> <input type="checkbox"> Thuốc cảm cúm<br></p>
 <hr />
-<p><input type="checkbox"> Quần áo 1 bộ/ngày <br> <input type="checkbox"> Tất 1 đôi/ngày <br> <input type="checkbox"> Giày đi bộ <br> <input type="checkbox"> Dép <br> <input type="checkbox"> Mũ che nắng<br> <input type="checkbox"> Ô che mưa<br> <input type="checkbox"> Quần bơi<br> <input type="checkbox"> Kinh bơi<br></p>
+<p><input type="checkbox"> Quần áo 1 bộ/ngày <br> <input type="checkbox"> Áo khoác mỏng mặc trên máy bay<br> <input type="checkbox"> Tất 1 đôi/ngày <br> <input type="checkbox"> Giày đi bộ <br> <input type="checkbox"> Dép <br> <input type="checkbox"> Mũ che nắng<br> <input type="checkbox"> Ô che mưa<br> <input type="checkbox"> Quần bơi<br> <input type="checkbox"> Kinh bơi<br></p>
 </div>
 
 
