--- a/public/404.html
+++ b/public/404.html
@@ -30,6 +30,8 @@
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lato:400,700%7CMerriweather%7CRoboto+Mono">
   <link rel="stylesheet" href="./css/hugo-academic.css">
   
+  <link rel="stylesheet" href="./css//static/css/style.css">
+  
 
   
     <script>
