--- a/public/book/plain-english.html
+++ b/public/book/plain-english.html
@@ -50,7 +50,7 @@
 
 
 
-<link rel="stylesheet" href="css\style.css" type="text/css" />
+<link rel="stylesheet" href="css\book.css" type="text/css" />
 </head>
 
 <body>
