--- a/public/index.html
+++ b/public/index.html
@@ -511,8 +511,11 @@
     <p>Apart from my work, I really enjoy my time to create shiny apps to automate some common analysis problems for my team, some of them are as follows:</p>
 
 <ul>
-<li><a href="https://anhhoangduc.shinyapps.io/basket_analysis/" target="_blank">Market basket analysis</a></li>
-<li><a href="https://anhhoangduc.shinyapps.io/rfm_segmentation/" target="_blank">Customers segmentation with RFM</a>
+<li><a href="https://anhhoangduc.shinyapps.io/basket_analysis/" target="_blank">Market basket analysis</a>: Recommendation engine based on customer behaviours
+using apriori algorithm</li>
+<li><a href="https://anhhoangduc.shinyapps.io/rfm_segmentation/" target="_blank">Customers segmentation with RFM</a>: Cluster customers transaction behaviours
+using RFM techniques (Recency - Frequency - Monetary)</li>
+<li><a href="https://anhhoangduc.shinyapps.io/static-sql/" target="_blank">Static to Dynamic SQLServer</a>: Auto translate Static SQL to Dynamic SQL with parameters
 <br /></li>
 </ul>
 
