update-cv & netlify
Update cv

--- a/public/cv/index.html
+++ b/public/cv/index.html
@@ -802,7 +802,7 @@
 This browser does not support PDFs. Please download the PDF to view it: <a href="../pdf/ducanhcv.pdf">Download PDF</a>
 </iframe>
 <hr>
-<p>You can download my CV by clicking this <a href="http://anhhoangduc.com/pdf/ducanhcv.pdf" target="_blank" rel="noopener">link</a></p>
+<p>You can download my CV by clicking this <a href="http://anhhoangduc.com/pdf/anhhd-cv.pdf" target="_blank" rel="noopener">link</a></p>
 
     </div>
 
