--- a/public/ca-nhan/guitar.html
+++ b/public/ca-nhan/guitar.html
@@ -1315,7 +1315,7 @@ ul.task-list{list-style: none;}
 
 
 
-<link rel="stylesheet" href="style.css" type="text/css" />
+<style type="text/css">body { font-family: Cambria, Georgia, serif}h1, h2, h3, h4, h5, h6 {font-family: Cambria, Georgia, serif;font-weight: bold;}.remark-code, .remark-inline-code { font-family: 'Source Code Pro', 'Lucida Console', Monaco, monospace; }a {color: #2780e3;text-decoration: none;}table {border-collapse: collapse;max-width:100%;border-top: 1px solid #666;border-bottom: 1px solid #666;table-layout: auto;}th, td {text-align: left;padding: 5px;white-space: auto;}tr:nth-child(even){background-color: #f2f2f2}th {background-color: #2c3e50;color: white;border-bottom: 1px solid #666;}blockquote {padding: 10.5px 21px;margin: 0 0 21px;font-size: 15px;font-style: italic;border-left: 5px solid #2c3e50;}</style>
 
 
 
@@ -1611,8 +1611,76 @@ lamb</h2>
 </div>
 <div id="nhạc-khác" class="section level1" number="2">
 <h1><span class="header-section-number">2</span> Nhạc khác</h1>
-<div id="love-is-blue" class="section level2" number="2.1">
-<h2><span class="header-section-number">2.1</span> Love is blue</h2>
+<div id="ánh-trăng-nói-hộ-lòng-tôi" class="section level2" number="2.1">
+<h2><span class="header-section-number">2.1</span> Ánh trăng nói hộ lòng
+tôi</h2>
+<p>Intro:</p>
+<p>Sol [C]Mi Rê Đô Sol [Em] Si<br />
+Si Đô [F]La Si La Sol [C] Mi<br />
+Sol [C]Mi Rê Đô Sol [Em] Si<br />
+La Si [F]Đô, Đô Đô Rê Mi [G7]Rê</p>
+<p>Này [C] người yêu hỡi xin [Em] đừng quay bước<br />
+Vì [Am] em đã [F] trót yêu [C] anh<br />
+Tiếng yêu [Am] đầu ngại ngùng<br />
+Dẫu ân [F] tình ngàn trùng<br />
+Muôn bể [Dm] dâu em nào biết [G7] đâu</p>
+<p>Này [C] người yêu hỡi ân [Em] tình em đó<br />
+Ngàn [Am] năm như [F] ánh trăng [C] tàn<br />
+Vẫn muôn [Am] đời dịu dàng<br />
+Vẫn muôn [F] đời nồng nàn<br />
+Tha thiết [Dm] yêu dù [G7] tình yêu trái [C] ngang</p>
+<p>ĐK: Ái [C] ân như bọt sóng [Em] trào<br />
+Tan vỡ [Am] mau bước chân sỏi [C] đá<br />
+Trái tim em bờ cát [Em] mềm<br />
+Bàn chân [Am] ai vội vàng in dấu [G7] quên</p>
+<p>Thuyền [C] tình xa bến mê [Em] trời hoang phế<br />
+Chờ [Am] theo muôn [F] ánh trăng [C] tàn<br />
+Những đêm [Am] về lạnh lùng<br />
+Gió mưa [F] nào ngại ngùng<br />
+Hoen mắt [Dm] em đường [G7] khuya trăng lẻ [C] loi</p>
+<hr />
+<p>Version 2: (Lương Bích Hữu)</p>
+<p>Từ [C] lâu em đã yêu [Em] thầm anh đó<br />
+Mà [Am] không dám [F] nói nên [C] lời<br />
+Nói ra [Am] sợ người cười<br />
+Lỡ anh [F] chẳng nhận lời<br />
+Nên cứ [Dm] yêu âm thầm thế [G7] thôi.</p>
+<p>Nhiều [C] khi, em đã mơ [Em] mộng hai đứa<br />
+Cùng [Am] nhau nghe [F] suối trăng [C] mờ<br />
+Cả hai [Am] cùng cười đùa<br />
+Chiếc hôn [F] đầu hẹn hò<br />
+Dưới ánh [Dm] trăng hẹn [G7] thề với [C] nhau.</p>
+<p>ĐK: Giấc [C] mơ anh là chú [Em] rễ<br />
+Còn em [Am] là cô dâu rạng [C] rỡ<br />
+Nắm tay ta cùng ước [Em] nguyện<br />
+Trọn đời [Am] ta, yêu không cách [G7] xa.</p>
+<p>Từ [C] lâu em đã yêu [Em] thầm anh đó<br />
+Mà [Am] không dám [F] nói nên [C] lời<br />
+Ánh trăng [Am] hiểu, được lòng<br />
+Của em [F] còn ngại ngùng<br />
+Dẫu đã [Dm] yêu người [G] rồi biết [C] không?</p>
+<p>You [C] ask how deep I [Em] feel for you<br />
+And [Am] how much [F] I love [C] you<br />
+I am [Am] always true<br />
+And my [F] love is real<br />
+The moon [Dm] represents my [G7] heart</p>
+<p>You [C] ask how deep I [Em] feel for you<br />
+And [Am] how much [F] I love [C] you<br />
+I won’t [Am] ever change<br />
+We will [F] be the same<br />
+The moon [Dm] repre- [G7] sents my [C] heart</p>
+<p>Chorus: Sweet [C] with a gentle [Em] kiss<br />
+You have [Am] truly won my [C] heart<br />
+All things and times we [Em] share<br />
+I re- [Am] member til this [G7] day</p>
+<p>You [C] ask how deep I [Em] feel for you<br />
+And [Am] how much [F] I love [C] you<br />
+You can [Am] think of me<br />
+May be [F] you can see<br />
+The moon [Dm] repre- [G7] sents my [C] heart</p>
+</div>
+<div id="love-is-blue" class="section level2" number="2.2">
+<h2><span class="header-section-number">2.2</span> Love is blue</h2>
 <p>[Dm] Ngát [G] xanh, xanh [C] như khung [F] trời</p>
 <p>[Dm] Tình yêu màu [Bb] xanh lúc [C] em đã yêu [F] rồi</p>
 <p>[Dm] Ấm [G] êm trong [C] đôi tay [F] người</p>
@@ -1685,8 +1753,8 @@ lamb</h2>
 <p>[Dm] Blue, [G] blue, [C] love is [F] blue</p>
 <p>[Dm] Love is [Bb] blue when [A7] I am [Dm] yours</p>
 </div>
-<div id="tình-nông-cháy-over-and-over" class="section level2" number="2.2">
-<h2><span class="header-section-number">2.2</span> Tình nông cháy (Over
+<div id="tình-nông-cháy-over-and-over" class="section level2" number="2.3">
+<h2><span class="header-section-number">2.3</span> Tình nông cháy (Over
 and Over)</h2>
 <p>Em không mơ [Am] hoang kiếp sống trên cung [E7] hằng</p>
 <p>Em không tham lam diễm phúc trên thiên [Am] đàng</p>
@@ -1729,8 +1797,8 @@ and Over)</h2>
 <p>Here in your [F] arms no words far [C] away</p>
 <p>Here in your [E7] arms forever I’ll [Am] stay</p>
 </div>
-<div id="donna-donna" class="section level2" number="2.3">
-<h2><span class="header-section-number">2.3</span> Donna Donna</h2>
+<div id="donna-donna" class="section level2" number="2.4">
+<h2><span class="header-section-number">2.4</span> Donna Donna</h2>
 <p>[Am] Mái nhà [E] xưa yêu dấu,</p>
 <p>[Am] Bức tường [E] rêu phong cũ [Am] nơi cậu bé [Dm] qua những [Am]
 ngày thơ [E] ấu.</p>
@@ -1809,8 +1877,8 @@ nắng.</p>
 <p>[E] Donna, Donna, Donna, [Am] Donna</p>
 <p>[E] Donna, Donna, Donna, [Am] Donna</p>
 </div>
-<div id="sound-of-silence" class="section level2" number="2.4">
-<h2><span class="header-section-number">2.4</span> Sound of silence</h2>
+<div id="sound-of-silence" class="section level2" number="2.5">
+<h2><span class="header-section-number">2.5</span> Sound of silence</h2>
 <p>Capo 6</p>
 <p>[A] Hello darkness my old [G]friend</p>
 <p>I’ve come to talk with you [Am]again</p>
@@ -1851,8 +1919,8 @@ nắng.</p>
 <p>And tenement halls [Am]</p>
 <p>and [C]whispered in the [C]sound of [A]silence</p>
 </div>
-<div id="người-tình-mùa-đông" class="section level2" number="2.5">
-<h2><span class="header-section-number">2.5</span> Người tình mùa
+<div id="người-tình-mùa-đông" class="section level2" number="2.6">
+<h2><span class="header-section-number">2.6</span> Người tình mùa
 đông</h2>
 <p>Đường vào [C]tim em ôi băng [Em]giá</p>
 <p>Trời mùa [Am]đông mây vẫn hay đi [Em]về</p>
@@ -1874,8 +1942,8 @@ nắng.</p>
 <p>Ôi bàn [F]tay ai đã dắt em chiều [G]nay</p>
 <p> </p>
 </div>
-<div id="nhỏ-ơi" class="section level2" number="2.6">
-<h2><span class="header-section-number">2.6</span> Nhỏ ơi</h2>
+<div id="nhỏ-ơi" class="section level2" number="2.7">
+<h2><span class="header-section-number">2.7</span> Nhỏ ơi</h2>
 <p>Lần đầu(Dm) ta gặp nhỏ( C), trong nắng(Am) chiều bay bay(Dm)</p>
 <p>Ngập ngừng(Dm) ta hỏi nhỏ( C), nhỏ bảo( C) nhỏ không tên(F)</p>
 <p>Ừ thì(Dm) nhỏ không tên( C), bây giờ( C) quen nhé nhỏ(Am), nhỏ
@@ -1905,8 +1973,8 @@ nắng.</p>
 <p>Ừ thì khờ ghê đi, thương rồi sao chẳng hiểu, nhỏ ơi</p>
 <p> </p>
 </div>
-<div id="huyền-thoại-rượu" class="section level2" number="2.7">
-<h2><span class="header-section-number">2.7</span> Huyền thoại rượu</h2>
+<div id="huyền-thoại-rượu" class="section level2" number="2.8">
+<h2><span class="header-section-number">2.8</span> Huyền thoại rượu</h2>
 <p>(Em)Ai trên đời chẳng uống (Am)rượu</p>
 <p>mà đã uống rượu là (Em)phải say.</p>
 <p>Rượu mà uống không say(Dm)</p>
@@ -1974,8 +2042,8 @@ ly dị vợ, để từng đêm đi nhậu, chẳng sợ vợ rầy la.</p>
 canh, con cầm dao ngồi cạnh, đừa nào vô thì khó chạy, mẹ là mẹ của
 ta.</p>
 </div>
-<div id="chị-tôi" class="section level2" number="2.8">
-<h2><span class="header-section-number">2.8</span> Chị tôi</h2>
+<div id="chị-tôi" class="section level2" number="2.9">
+<h2><span class="header-section-number">2.9</span> Chị tôi</h2>
 <p>[Am] Nhà tôi trên bến [G] sông có chiếc cầu [Am] nhỏ cong cong</p>
 <p>Hàng [C] cau dưới nắng [G] trong lá [Am] trầu không</p>
 <p>[C] Chị tôi trông dễ [Gm] thương bán rau [Dm] chợ cầu Đông í a</p>
@@ -2008,8 +2076,8 @@ ta.</p>
 <p> </p>
 <p>[F] Chị tôi chưa [G] lấy [Am] chồng..</p>
 </div>
-<div id="tình-lỡ-cách-xa" class="section level2" number="2.9">
-<h2><span class="header-section-number">2.9</span> Tình lỡ cách xa</h2>
+<div id="tình-lỡ-cách-xa" class="section level2" number="2.10">
+<h2><span class="header-section-number">2.10</span> Tình lỡ cách xa</h2>
 <p>[Am] Một mùa thu [C] qua có [Dm] em bên giấc [E] mộng,</p>
 <p>[Am] Tình hồng chưa [C] phai cớ [D] sao em lại [E7] xa</p>
 <p>[Am] Từ ng chiếc lá nhẹ [C] rơi đường [D] phố vắng buồn [Am] tênh</p>
@@ -2028,8 +2096,8 @@ ta.</p>
 <p>Bao câu [F] hát chỉ [G] yêu một [Dm] người [Em] mình [G] em [Am]
 thôi.</p>
 </div>
-<div id="hòn-đá-cô-đơn" class="section level2" number="2.10">
-<h2><span class="header-section-number">2.10</span> Hòn đá cô đơn</h2>
+<div id="hòn-đá-cô-đơn" class="section level2" number="2.11">
+<h2><span class="header-section-number">2.11</span> Hòn đá cô đơn</h2>
 <p>[C] Có hòn đá cô [G] đơn xa xăm</p>
 <p>[Am] Đứng ở đó cớ [Em] sao một mình</p>
 <p>[F] Phải chăng đá cũng [C] thất tình</p>
@@ -2055,8 +2123,8 @@ thôi.</p>
 <p>[F] Vì người yêu ơi ta biết [C] rằng</p>
 <p>[G] Nàng sẽ quên mất [C] ta.</p>
 </div>
-<div id="vâng-trăng-khóc" class="section level2" number="2.11">
-<h2><span class="header-section-number">2.11</span> Vâng trăng khóc</h2>
+<div id="vâng-trăng-khóc" class="section level2" number="2.12">
+<h2><span class="header-section-number">2.12</span> Vâng trăng khóc</h2>
 <p>Đã không [Am] còn người yêu [C] hỡi</p>
 <p>Ngày xưa [F] ấy đôi ta bên nhau không [G] rời</p>
 <p>Ngồi trên [Am] cát nhìn biển [Dm] đêm</p>
@@ -2183,6 +2251,42 @@ hum</h2>
 <p>Nguyện người xin chớ hững [Dm]hờ, tìm về chánh Pháp vẹn [G]nguyên</p>
 <p>Cùng dâng đời bao lời [Am]ca Thiện lành [Am].</p>
 <p>Dạo: [F] [G] [Em] [Am] [Dm] [G] [Am]</p>
+</div>
+<div id="tương-tức" class="section level2" number="3.4">
+<h2><span class="header-section-number">3.4</span> Tương tức</h2>
+<p>Mình là cụm [Am]mây bay<br />
+Cũng như trời [Em]xanh cao<br />
+Là cánh chim [Am]ngàn<br />
+Dang đôi cánh thật [Em]xa</p>
+<p>Mình là một [Am]bông hoa<br />
+Với muôn ngàn [Em]nắng ấm<br />
+Là đất mẹ [F]hiền<br />
+Gìn [G]giữ bao mầm [Am]xanh</p>
+<p>Và mình tự [C]do<br />
+Khi trái tim đã [G]mở ra<br />
+Luôn có thảnh [Am]thơi<br />
+Vì nguồn tâm trong [Em]sáng</p>
+<p>Này hỡi Chị Em [F]thương<br />
+Cùng với Anh [G]thân yêu<br />
+Hãy bước trên [F]con đường<br />
+[G]Hiểu và [Am]thương.</p>
+<hr />
+<p>I am a [Am]cloud<br />
+I am the [Em]blue sky<br />
+I am a [Am]bird<br />
+Spreading out its [Em]wings</p>
+<p>I am a [Am]flower<br />
+I am the [Em]sunshine<br />
+I am the [F]earth<br />
+[G]Receiving a [Am]seed</p>
+<p>And I am [C]free<br />
+When my heart is [G]open<br />
+Yes I am [Am]free<br />
+When my mind is [Em]clear</p>
+<p>Oh dear [F]brother<br />
+Oh dear [G]sister<br />
+Let’s walk to- [F]gether<br />
+[G]Mindful- [Am]ly.</p>
 </div>
 </div>
 
