--- a/public/ds-book-r/index.html
+++ b/public/ds-book-r/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Hoàng Đức Anh">
-<meta name="dcterms.date" content="2023-11-27">
+<meta name="dcterms.date" content="2023-11-28">
 
 <title>Khoa học dữ liệu với R</title>
 <style>
@@ -716,7 +716,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">November 27, 2023</p>
+      <p class="date">November 28, 2023</p>
     </div>
   </div>
   
@@ -737,24 +737,25 @@ ul.task-list li input[type="checkbox"] {
 <li>Thu thập (Capture): Thu thập dữ liệu từ các hệ thống nguồn</li>
 <li>Lưu trữ (Store): Lưu trữ dữ liệu được thu thập</li>
 <li>Xử lý (Process): Xử lý, làm sạch dữ liệu</li>
-<li>Chia sẻ (Share): Tích hợp dữ liệu từ các nguồn, chia sẻ dưới dạng API, etc.</li>
-<li>Sử dụng (Use): Báo cáo, phân tích</li>
+<li>Phân tích (Analysis): Báo cáo, phân tích, dự báo</li>
+<li>Sử dụng (Use): Đưa các kết quả phân tích vào hoạt động hàng ngày của hoạt động kinh doanh, vận hành, chia sẻ dưới dạng API dự báo, dashboard, report, insights</li>
 <li>Ngừng sử dụng (End of life): Đưa vào vùng đóng băng, hạn chế sử dụng</li>
 </ul>
-<p>Trong các bước trên, việc sử dụng dữ liệu (hay còn gọi là phân tích dữ liệu) được nhấn mạnh và chú trọng nhiều nhất trong vòng đời của dữ liệu.</p>
+<p>Trong các bước trên, việc phân tích dữ liệu (hay còn gọi là phân tích dữ liệu) được nhấn mạnh và chú trọng nhiều nhất trong vòng đời của dữ liệu.</p>
 <div class="callout callout-style-default callout-tip callout-titled">
 <div class="callout-header d-flex align-content-center">
 <div class="callout-icon-container">
 <i class="callout-icon"></i>
 </div>
 <div class="callout-title-container flex-fill">
-Tip
+Phân tích dữ liệu là gì?
 </div>
 </div>
 <div class="callout-body-container callout-body">
-<p>Phân tích dữ liệu là việc <code>đưa ra và chứng minh các giả thuyết (hypothesis)</code> là đúng hoặc sai dựa trên cở sở sử dụng dữ liệu.</p>
+<p>Phân tích dữ liệu là quá trình <code>đưa ra và chứng minh các giả thuyết (hypothesis)</code> là đúng hoặc sai dựa trên cở sở sử dụng dữ liệu.</p>
 </div>
 </div>
+<p>Do đó, yếu tố cốt tủy và nghệ thuật phân tích dữ liệu là đặt ra câu hỏi và biết cách trả lời câu hỏi một cách khoa học. Với cách tiếp cận như trên, dù là một báo cáo (report) thông thường cũng ẩn tàng các <code>hypothesis</code> mà người đưa ra yêu cầu muốn giải quyết.</p>
 <p>Với sự phát triển của ngành, vai trò phân tích dữ liệu ngày càng được mở rộng và là vùng giao thoa giữa vị trí báo cáo phân tích truyền thống (Business Intelligence) và khoa học dữ liệu (Data Science).</p>
 <section id="tại-sao-phân-tích-dữ-liệu-là-nghề-khó" class="level2" data-number="1.1">
 <h2 data-number="1.1" class="anchored" data-anchor-id="tại-sao-phân-tích-dữ-liệu-là-nghề-khó"><span class="header-section-number">1.1</span> Tại sao phân tích dữ liệu là nghề khó?</h2>
@@ -857,17 +858,26 @@ Tip
 <center>
 <img src="Images/01-data-science-job.png" class="img-fluid">
 </center>
-<p>Nếu bám sát vào hoạt động của sơ đồ phía trên, ta có thể chia các hoạt động có liên quan đến khoa học dữ liệu thành 4 nhóm lớn.</p>
+<p>Nếu bám sát vào hoạt động của sơ đồ phía trên, ta có thể chia các hoạt động có liên quan đến dữ liệu thành 4 nhóm lớn.</p>
 <ul>
 <li><strong>Data Governance</strong> - Quản trị dữ liệu: Quản trị các hoạt động ghi nhận dữ liệu vào hệ thống của tổ chức, đưa ra các quy định, quy trình để đảm bảo dữ liệu được đưa vào hệ thống một cách chính xác và đảm bảo yêu cầu của hoạt động kinh doanh. Ví dụ, dữ liệu địa chỉ của khách hàng phải để dạng dropdown theo các đơn vị hành chính để tránh sai sót (quận/huyện, phường/xã, tỉnh, thành phố)</li>
-<li><strong>Data Management</strong> - Quản lý dữ liệu: Quản lý dữ liệu sau khi dữ liệu được đưa vào hệ thống của tổ chức, bao gổm làm sạch, tái cấu trúc, sắp xếp dữ liệu theo hệ thống để đảm bảo sẵn sàng sử dụng dữ liệu</li>
+<li><strong>Data Management</strong> - Quản lý dữ liệu: Quản lý dữ liệu sau khi dữ liệu được đưa vào hệ thống của tổ chức, bao gổm làm sạch, tái cấu trúc, sắp xếp dữ liệu theo hệ thống để đảm bảo sẵn sàng sử dụng dữ liệu. Nhóm công việc liên quan đến Quản lý dữ liệu bao gồm các vị trí:
+<ul>
+<li><strong>Data Engineer</strong>: Kỹ sư dữ liệu, chịu trách nhiệm thực hiện việc dịch chuyển và biến đổi dữ liệu sang các vùng khác nhau</li>
+<li><strong>Business Analyst</strong>: Phân tích nghiệp vụ, là cầu nối giữa kỹ sư dữ liệu với các hệ thống IT và nhu cầu nghiệp vụ. Với các tổ chức quy mô nhỏ, vai trò này nằm luôn cùng với Data Engineer nhưng với các tổ chức lớn, nghiệp vụ phức tạp, đây là vị trí đóng vai trò rất quan trọng</li>
+<li><strong>DBA (Data Base Administrator)</strong>: Quản lý, vận hành server hệ thống</li>
+</ul></li>
 <li><strong>Business Intelligence</strong>: Khai thác dữ liệu để hỗ trợ hoạt động kinh doanh và quá trình ra quyết định. Đối với hoạt động BI, có thể chia thành ba cấp độ.
 <ul>
 <li><strong>Data provider</strong> - cung cấp dữ liệu: Đơn vị kinh doanh/ nghiệp vụ yêu cầu như thế nào, cung cấp chính xác như vậy</li>
 <li><strong>Information &amp; basic insight provider</strong> - cung cấp thông tin &amp; các hiểu biết đơn giản về khách hàng và hoạt động kinh doanh: Đưa ra các nhận định, thông tin ở mức độ đơn giản nhưng rất hữu dụng cho hoạt động kinh doanh. Công cụ sử dụng cho cấp độ này phần lớn là Excel với pivot table đi kèm với các chỉ số thống kê cơ bản. <em>Ví dụ, top 10% khách hàng chiếm đến 90% doanh thu của cả công ty.</em></li>
 <li><strong>Advanced insights provider</strong> - cung cấp các hiểu biết sâu sắc về khách hàng và hoạt động kinh doanh. Để đưa ra các hiểu biết này, phải sử dụng nhiều đến các công cụ và mô hình thuộc nhóm <code>inference</code> nhằm tác động đến hoạt động kinh doanh. <em>Ví dụ, khách hàng nếu có ít nhất 3 loại giao dịch trong 2 tháng đầu tiên có khả năng ở lại với ngân hàng cao hơn 20% so với các khách hàng khác.</em></li>
 </ul></li>
-<li><strong>Predictive Modelling/ Optimization</strong> - Phân tích dự báo, tối ưu hóa. Ở mức độ này, công việc phân tích dữ liệu sẽ tập trung nhiều vào việc dự báo và tối ưu hóa. <em>Ví dụ: Khách hàng nào là khách hàng có nhiều khả năng bán chéo được sản phẩm thấu chi?</em> Các công cụ sử dụng trong cấp độ này là các phần mềm chuyên biệt về phân tích thống kê, dự báo như R/Python/SAS.</li>
+<li><strong>Predictive Modelling/ Optimization</strong> - Phân tích dự báo, tối ưu hóa. Ở mức độ này, công việc phân tích dữ liệu sẽ tập trung nhiều vào việc dự báo và tối ưu hóa. <em>Ví dụ: Khách hàng nào là khách hàng có nhiều khả năng bán chéo được sản phẩm thấu chi?</em> Các công cụ sử dụng trong cấp độ này là các phần mềm chuyên biệt về phân tích thống kê, dự báo như R/Python/SAS. Các vị trí thuộc nhóm này bao gồm <code>Data Scientist</code> &amp; <code>ML/AI Engineer</code>
+<ul>
+<li><strong>Data Scientist</strong>: Xây dựng các mô hình dự báo</li>
+<li><strong>ML/AI Engineer</strong>: Đưa mô hình dự báo vào môi trường thực (production) dưới dạng package, API realtime.</li>
+</ul></li>
 </ul>
 </section>
 <section id="dựa-theo-chu-kỳ-của-khách-hàng-đối-với-sản-phẩm" class="level3" data-number="1.2.3">
@@ -925,11 +935,55 @@ Tip
 <i class="callout-icon"></i>
 </div>
 <div class="callout-title-container flex-fill">
+Disclaimer
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p>Các nội dung trong các chương tiếp theo là tài liệu tổng hợp từ nhiều nguồn và được sử dụng với mục đích cá nhân như tài liệu tra cứu tổng hợp nên không thể tránh khỏi việc thiếu sót. Tài liệu này chỉ nên dùng như <strong>tài liệu tham khảo</strong>.</p>
+</div>
+</div>
+<div class="callout callout-style-default callout-tip callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
 Lưu ý
 </div>
 </div>
 <div class="callout-body-container callout-body">
-<p>Các nội dung trong các chương tiếp theo là tài liệu tổng hợp từ nhiều nguồn và được sử dụng với mục đích cá nhân như tài liệu dự phòng khi <strong><em>tuổi cao, mất trí nhớ</em></strong> nên không thể tránh khỏi việc chưa được tối ưu tại mỗi chương. Tài liệu này chỉ nên dùng như <strong>tài liệu tham khảo</strong>.</p>
+<p>Đối với các bạn muốn tập trung phát triển Insights, nên tập trung đọc các chương sau:</p>
+<p><strong>Cấp độ 1 - Phân tích khám phá - bắt buộc phải nắm vững (chương 1-7)</strong></p>
+<ul>
+<li>Giới thiệu cơ bản về R (chương 1)</li>
+<li>Xây dựng báo cáo với Rmarkdown</li>
+<li>Biến đổi dữ liệu với DPLYR</li>
+<li>Phân rã &amp; xoay chiều dữ liệu</li>
+<li>Ngữ pháp biểu đồ với GGPLOT2</li>
+<li>Các chỉ số thống kê cơ bản</li>
+</ul>
+<p><strong>Cấp độ 2 - Phân tích khám phá - Kỹ thuật nâng cao - nhưng vẫn cần bắt buộc phải nắm vững (chương 8-10)</strong></p>
+<ul>
+<li>Xử lý dữ liệu text</li>
+<li>Lập trình với purrr</li>
+<li>Lập trình hàm</li>
+</ul>
+<p><strong>Cấp độ 3 - cơ bản về các thuật toán &amp; nguyên lý thường sử dụng</strong>:</p>
+<ul>
+<li>Nguyên lý dự báo &amp; cơ bản học máy (chương 18)</li>
+<li>Mô hình hồi quy tuyến tính (chương 19)</li>
+<li>Mô hình logistics (chương 20)</li>
+<li>Cây quyết định &amp; họ cây quyết định (chương 21-22)</li>
+<li>Phân cụm với kmeans (chương 38)</li>
+<li>Basket Analysis (chương 39)</li>
+</ul>
+<p><strong>Nâng cao</strong></p>
+<ul>
+<li>Survival Analysis (chương 54)</li>
+<li>Quantile Regression (chương 59)</li>
+<li>Chuỗi thời gian (chương 41)</li>
+</ul>
+<p>Các chương và nội dung khác dùng để tham khảo đọc thêm nếu cần. Tuy nhiên, với việc nắm vững các kỹ thuật trên đã giải quyết 95%+ các bài toàn thực tế trên các lĩnh vực khác nhau và giúp các bạn có thể dịch chuyển nhanh chóng sang các tầng insights nâng cao</p>
 </div>
 </div>
 
